# flecs-public

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-3RDPARTY  README.md  SECURITY.md  api-spec.yaml  auditable-cargo  cargo_vet.json  cmake.sh  config.toml  corrosion_cxx.cmake  docker.yml
apps/tech.flecs.mqtt-bridge/: CMakeLists.txt  Dockerfile  manifest.json  mqtt_bridge.h
apps/tech.flecs.mqtt-bridge/docker/: Dockerfile
apps/tech.flecs.mqtt-bridge/src/: mqtt_bridge.cpp
apps/tech.flecs.service-mesh/: CMakeLists.txt  Dockerfile  manifest.json
apps/tech.flecs.service-mesh/assets/: entrypoint.sh
apps/tech.flecs.service-mesh/docker/: Dockerfile
backend/: CMakeLists.txt  http_request_handler.h
backend/src/: http_request_handler.cpp  main.cpp
cli/: CMakeLists.txt  Makefile
cli/debian/DEBIAN/: postinst
cli/src/: main.cpp
daemon/: CMakeLists.txt  Makefile  daemon.h  signal_handler.h
daemon/api/: CMakeLists.txt  api.h  openapi.yaml  schema.yaml
daemon/api/endpoints/: CMakeLists.txt  endpoints.h
daemon/api/lib/: CMakeLists.txt  libflecs.h
daemon/api/src/: api.cpp
daemon/api/test/: CMakeLists.txt  test_api.cpp
daemon/app/: CMakeLists.txt  app.h  app_status.h
daemon/app/conffile/: CMakeLists.txt  conffile.h
daemon/app/env_var/: CMakeLists.txt  env_var.h
daemon/app/port_range/: CMakeLists.txt  port_range.h
daemon/app/src/: app.cpp
daemon/app/test/: CMakeLists.txt  test_app.cpp
daemon/common/: CMakeLists.txt
daemon/common/app/: CMakeLists.txt  app.h  app_key.h  app_name.h  app_status.h
daemon/common/db/: CMakeLists.txt  app_db.h
daemon/common/deployment/: CMakeLists.txt  deployment.h  deployment_docker.h
daemon/common/instance/: CMakeLists.txt  instance.h  instance_config.h  instance_id.h  instance_status.h
daemon/common/network/: CMakeLists.txt  network.h  network_type.h
daemon/common/types/: network_type.h
daemon/db/: CMakeLists.txt  app_db.h
daemon/db/src/: app_db.cpp
daemon/db/test/: CMakeLists.txt  test_app_db.cpp
daemon/debian/DEBIAN/: control  postinst
daemon/docker/flecs/: Dockerfile
daemon/docker/flecs-slim/: Dockerfile
daemon/include/: daemon.h
daemon/include/app/: app_status.h
daemon/include/db/: app_db.h
daemon/include/instance/: instance_status.h
daemon/include/lib/: libflecs.h
daemon/include/service/: service_app_manager.h  service_table.h
daemon/instance/: CMakeLists.txt  instance_config.h  instance_status.h
daemon/lib/: CMakeLists.txt  libflecs.h
daemon/lib/private/: libflecs_private.h
daemon/lib/src/: libflecs.cpp
daemon/modules/: CMakeLists.txt  app_manager.h  errors.h  factory.h  help.h  module.h  rpc.h  usage.h  version.h
daemon/modules/app_manager/: CMakeLists.txt  app_manager.h
daemon/modules/apps/: CMakeLists.txt  apps.h
daemon/modules/console/: CMakeLists.txt  console.h  types.h
daemon/modules/data_layer/: CMakeLists.txt  data_layer.h
daemon/modules/device/: CMakeLists.txt  device.h
daemon/modules/factory/: CMakeLists.txt  factory.h
daemon/modules/flecsport/: CMakeLists.txt  export_manifest.h  flecsport.h
daemon/modules/help/: CMakeLists.txt  help.h
daemon/modules/instances/: CMakeLists.txt  instances.h  types.h
daemon/modules/jobs/: CMakeLists.txt  job_id.h  job_progress.h  job_status.h  jobs.h
daemon/modules/manifests/: CMakeLists.txt  manifests.h
daemon/modules/marketplace/: CMakeLists.txt  marketplace.h
daemon/modules/module_base/: CMakeLists.txt  errors.h  module.h
daemon/modules/private/: app_manager_private.h
daemon/modules/rpc/: CMakeLists.txt  rpc.h
daemon/modules/system/: CMakeLists.txt  system.h
daemon/modules/usage/: CMakeLists.txt  usage.h
daemon/modules/version/: CMakeLists.txt  version.h
daemon/scripts/: flecs-update-hosts.sh
daemon/service/: service_errors.h  service_factory.h  service_help.h
daemon/src/: daemon.cpp  main.cpp
daemon/test/: CMakeLists.txt
docker/: CMakeLists.txt  build-image.sh  flecs-docker.cmake
docker/flecs/: CMakeLists.txt  Dockerfile  flecs.platforms
docker/flecs-slim/: CMakeLists.txt  Dockerfile
docker/floxy/: default.conf
docker/fs/: entrypoint.sh
examples/: Cargo.toml  princess_quest.rs  test_pull.rs
flecs/: CMakeLists.txt
flecs-core/: Cargo.toml  README.md  build.rs
flecs-core-rs/: Cargo.toml  build.rs
flecs-core-rs/src/: console.rs  lib.rs  network.rs  usb.rs
flecs-core/src/: gen_openapi.rs  lib.rs  wall.rs
flecs/api/: CMakeLists.txt  api.h  openapi.yaml
flecs/common/: CMakeLists.txt
flecs/core/: flecs.h
flecs/modules/: CMakeLists.txt
flecs/src/: main.cpp
flecs/util/: CMakeLists.txt
flecs_app_manifest/: .gitignore  Cargo.toml  GENERATEME.md  build.rs
flecs_app_manifest/src/: conversion.rs  generate.rs  lib.rs
flecs_core_cxx_bridge/: Cargo.toml  build.rs
flecs_core_cxx_bridge/src/: floxy.rs  lib.rs  manifest.rs  network.rs  system.rs  token.rs  usb.rs
flecsd/: Cargo.toml
flecsd/src/: main.rs
flunder/: CMakeLists.txt  flunder_client.h  flunder_data.h  flunder_variable.h
flunder/examples/: CMakeLists.txt  Makefile  flunder_client_example.c  flunder_client_example.cpp
flunder/impl/: flunder_client_impl.h
flunder/private/: flunder_client_private.h
flunder/src/: flunder_client.cpp  flunder_variable.cpp
flunder/test/: CMakeLists.txt  test_flunder.cpp
mqtt/: CMakeLists.txt  mqtt_client.h  mqtt_errors.h  mqtt_message.h
mqtt/example/: mqtt_client_example.c  mqtt_client_example.cpp  mqtt_client_example.py
mqtt/impl/: mqtt_client_impl.h
mqtt/private/: mqtt_client_private.h
mqtt/pybind/: CMakeLists.txt  mqtt_client_pybind.cpp  mqtt_message_pybind.cpp
mqtt/src/: mqtt_client.cpp
pkg/: CMakeLists.txt
pkg/DEBIAN/: postinst  postrm  preinst  prerm
util/archive/: CMakeLists.txt  archive.h
util/curl_easy_ext/: CMakeLists.txt  Makefile  curl_easy_ext.h
util/json/: CMakeLists.txt  json.h  json_parser.h
util/llhttp_ext/: CMakeLists.txt  Makefile  llhttp_ext.h
util/sqlite3_ext/: CMakeLists.txt  Makefile  sqlite3_column.h  sqlite3_db.h  sqlite3_primary.h  sqlite3_statements.h  sqlite3_table.h
(+1191 files in other folders)
