[package]
name = "flecs-core"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flecstract = { path = "../flecstract", version = "0.1.0" }
flecs_console_client = { path = "../flecs-console-api/flecs_console_client", version = "1.0.0" }
flecsd-axum-server = { path = "../flecsd-axum-server", version = "2.0.0" }
flecs_app_manifest = { path = "../flecs_app_manifest", version = "0.1.0" }
serde_json = "1.0.120"
reqwest = "0.12.5"
http = "1"
rusb = "0.9.3"
thiserror = "1.0.62"
libc = "0.2.153"
procfs = "0.16.0"
serde = { version = "1.0.203", features = ["derive"] }
usb-ids = "1.2024.4"
glob = "0.3.1"

[dev-dependencies]
mockito = "1.4"
tokio = { version = "1.38", features = ["full"] }
ntest = "0.9.3"