[package]
name = "flecs-core"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flecstract = { path = "../flecstract", version = "0.1.0" }
flecs_console_client = { path = "../flecs-console-api/flecs_console_client", version = "1.0.0" }
flecsd-axum-server = { path = "../flecsd-axum-server", version = "2.0.0" }
flecs_app_manifest = { path = "../flecs_app_manifest", version = "0.1.0" }
serde_json = "1.0.120"
reqwest = "0.12.5"
http = "1"
rusb = "0.9.3"
thiserror = "1.0.62"
libc = "0.2.153"
procfs = "0.16.0"
serde = { version = "1.0.203", features = ["derive"] }
usb-ids = "1.2024.4"
glob = "0.3.1"
axum = "0.7"
axum-extra = "0.9"
tokio = { version = "1.38", features = ["full"] }
http-body-util = "0.1"
hyper = { version = "1.4.0", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["tokio", "server-auto", "http1"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
reqwest-middleware = { version = "^0.3", features = ["json", "multipart"] }
async-trait = "0.1.80"
anyhow = { version = "1.0.86", features = ["backtrace"] }
platform-info = "2.0.3"
regex = "1.10.6"
bollard = { version = "0.17.1" }
futures-util = "0.3.30"
tokio-util = "0.7.11"
tokio-stream = "0.1.16"
futures = "0.3.30"

[dev-dependencies]
mockito = "1.4"
tokio = { version = "1.38", features = ["full"] }
ntest = "0.9.3"
tokio-test = "0.4.4"