[package]
name = "flecs-core"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flecstract = { path = "../flecstract", version = "0.1.0" }
flecs_console_client = { path = "../flecs-console-api/flecs_console_client", version = "1.0.0" }
flecsd_axum_server = { path = "../flecsd_axum_server", version = "2.0.0" }
flecs_app_manifest = { path = "../flecs_app_manifest", version = "0.1.0" }
serde_json = "1.0"
reqwest = "0.12"
http = "1"
rusb = "0.9"
thiserror = "1.0"
libc = "0.2"
procfs = "0.16"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = { version = "3.14" }
toml = "0.9"
usb-ids = "1.2024"
glob = "0.3"
axum = "0.7"
axum-extra = "0.9"
tokio = { version = "1.38", features = ["full"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
reqwest-middleware = { version = "^0.3", features = ["json", "multipart"] }
async-trait = "0.1"
anyhow = { version = "1.0", features = ["backtrace"] }
platform-info = "2.0"
regex = "1.10.6"
bollard = { version = "0.18" }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["default", "compat", "net"] }
futures = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
erased-serde = "0.4"
rand = "0.8.5"
docker-compose-types = { version = "0.22", default-features = false, features = ["norway"] }
astral-tokio-tar = { version = "0.5" }
chrono = "0.4.41"

[dev-dependencies]
mockito = "1.4"
tokio = { version = "1.38", features = ["full"] }
ntest = "0.9"
tokio-test = "0.4"
mockall = "0.13"
testdir = "0.9.3"
