[package]
name = "flecs_app_manifest"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
regress = "0.10.0"

[build-dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
typify = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
schemars = "0.8.21"
prettyplease = "0.2.20"
syn = "2.0.72"
