[package]
name = "flecs_app_manifest"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "generate"
path = "./src/generate.rs"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
regress = "0.10.0"
reqwest = { version = "0.12", features = ["blocking"] }
typify = "0.1"
schemars = "0.8"
prettyplease = "0.2"
syn = "2.0"
anyhow = "1.0"
